finished consuming promise module

--- a/consuming.html
+++ b/consuming.html
@@ -7,7 +7,9 @@
         <meta name="author" content="Nate Taylor"></meta>
         <link rel="stylesheet" href="./src/tachyons.min.css"></link>
         <link rel="stylesheet" href="./src/site.css"></link>
-        <script src="./src/axios.min.js"></script>
+        <!-- <script src="./src/axios.min.js"></script> -->
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     </head>
     <body>
         <h1 class="green ml4">Consuming Test Promises</h1>
